--- a/_includes/math-script.html
+++ b/_includes/math-script.html
@@ -10,5 +10,5 @@
     "HTML-CSS": { fonts: ["TeX"] }
   });
 </script>
-<script type="text/javascript" src="path-to-MathJax/MathJax.js">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 </script>
