--- a/_includes/math-script.html
+++ b/_includes/math-script.html
@@ -5,6 +5,7 @@
     tex2jax: {
       inlineMath: [ ['$','$'], ["\\(","\\)"] ],
       displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      tags: 'ams',
       processEscapes: true
     },
     "HTML-CSS": { fonts: ["TeX"] }
